Added period logic.